# pakarlib

./: Pipfile  README.md  pyproject.toml
pakarlib/: build.py  fetch.py
pakarlib/data/: segments.json
pakarlib/data/cities/: ar.json  en.json  he.json  ru.json
pakarlib/data/districts/: ar.json  en.json  he.json  ru.json
pakarlib/data/polygons/: 5000004.json  5000009.json  5000010.json  5000012.json  5000015.json  5000016.json  5000018.json  5000019.json  5000022.json  5000023.json  5000024.json  5000026.json  5000027.json  5000028.json  5000030.json  5000031.json  5000033.json  5000035.json  5000036.json  5000038.json  5000039.json  5000044.json  5000046.json  5000047.json  5000048.json  5000049.json  5000050.json  5000051.json  5000052.json  5000053.json  5000054.json  5000055.json  5000058.json  5000059.json  5000073.json  5000075.json  5000077.json  5000078.json  5000083.json  5000085.json  (+1391 more)
pakarlib/data/segments/: 5000009.json  5000019.json  5000023.json  5000024.json  5000026.json  5000031.json  5000033.json  5000035.json  5000036.json  5000044.json  5000046.json  5000047.json  5000048.json  5000049.json  5000050.json  5000051.json  5000055.json  5000058.json  5000075.json  5000077.json  5000085.json  5000088.json  5000089.json  5000092.json  5000099.json  5000102.json  5000103.json  5000105.json  5000106.json  5000109.json  5000114.json  5000117.json  5000119.json  5000120.json  5000124.json  5000125.json  5000128.json  5000129.json  5000133.json  5000134.json  (+681 more)
