[tool.poetry]
name = "pakarlib"
version = "0.1.0"
description = ""
authors = ["Yuval Adam <_@yuv.al>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "pakarlib.build:run"
fetch = "pakarlib.fetch:run"