[project]
name = "pakarlib"
version = "1.0.0"
description = "Unified data for Pikud Ha'Oref"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.3",
]

[project.scripts]
build = "pakarlib.build:run"
fetch = "pakarlib.fetch:run"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"